--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -20,3 +20,9 @@
 .previousTranslation {
 	background-color: #efefef;
 }
+
+footer {
+	padding: 10px 0;
+	border-top: 5px solid #ccc;
+	text-align: center;
+}
