--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -26,3 +26,10 @@ footer {
 	border-top: 5px solid #ccc;
 	text-align: center;
 }
+
+.navbar-lang-select {
+	width: 150px;
+	margin-top: 7px;
+	margin-right: 5px;
+	float: left;
+}
