--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -39,3 +39,26 @@ footer {
 	width: 100%;
 	float: left;
 }
+
+.streak-container {
+	text-align: center;
+	font-size: 20px;
+	padding: 10px;
+	margin: 10px 0;
+
+	.streak-days {
+		font-size: 30px;
+	}
+
+	.streak-practise-message {
+		font-size: 15px;
+	}
+}
+
+.streak-practised {
+	background: #E7F1E7;
+}
+
+.streak-not-practised {
+	background: #F2DEDE;
+}
